manifest/objects/LVGO__Lead__c.object
<CustomObject>
    <fields>
        <fullName>LVGO__Account_Address__c</fullName>
        <formula>LVGO__TAN__r.LVGO__Billing_State_Backend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Account_Record_Type__c</fullName>
        <formula>LVGO__TAN__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__AnnualRevenue__c</fullName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Assign_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assigns the lead to a new user. Triggers workflow that updates owner.</description>
        <inlineHelpText>Assigns the lead to a new user. Triggers workflow that updates owner.</inlineHelpText>
        <label>Assign Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__Call_Script__c</fullName>
        <description>This is where the call scripts will be uploaded</description>
        <label>Call Script</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__CountryCode__c</fullName>
        <label>Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>DZ</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BS</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BY</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BZ</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BT</fullName>
                </value>
                <value>
                    <fullName>BO</fullName>
                </value>
                <value>
                    <fullName>BQ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BW</fullName>
                </value>
                <value>
                    <fullName>BV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Created_by_Pardot__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the lead record was created by the Pardot to Salesforce connector. Populated by a Pardot automation rule.</description>
        <inlineHelpText>Indicates whether the lead record was created by the Pardot to Salesforce connector. Populated by a Pardot automation rule.</inlineHelpText>
        <label>Created by Pardot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Current_Account_State__c</fullName>
        <formula>LVGO__TAN__r.LVGO__Billing_State_Backend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Account State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Current_Account_Status__c</fullName>
        <formula>TEXT(LVGO__TAN__r.LVGO__Account_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__DoNotCall__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Email_Parse__c</fullName>
        <formula>IF( LVGO__Email__c &lt;&gt;NULL,SUBSTITUTE(LVGO__Email__c , LEFT(LVGO__Email__c , FIND(&quot;@&quot;, LVGO__Email__c )), NULL),NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Parse</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LVGO__Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LVGO__HasOptedOutOfEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__HasOptedOutOfFax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fax Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Include_in_email_marketing_campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should we include this lead in email marketing campaigns?</description>
        <label>Include in pre-event email marketing?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Include_in_post_event_email_marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in post-event email marketing?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Individual__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Individual</label>
        <referenceTo>Individual</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Apparel</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Beverage</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Machinery</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Not For Profit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Recreation</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Telecommunications</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Jigsaw__c</fullName>
        <label>Data.com Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__LastTransferDate__c</fullName>
        <label>Last Transfer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__Last_Status_Date__c</fullName>
        <label>Last Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LVGO__Last_Status__c</fullName>
        <label>Last Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__LeadSource__c</fullName>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Undefined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Lead_Gen_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select name of Lead Gen Rep who worked the Lead</description>
        <inlineHelpText>Select name of Lead Gen Rep who worked the Lead</inlineHelpText>
        <label>Lead Gen Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lead_Gen_Rep1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__Lead_Long_ID__c</fullName>
        <formula>Id
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead_Long ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Lead_Source_Detail_Other__c</fullName>
        <description>Additional details to Lead Source field</description>
        <inlineHelpText>Additional details to Lead Source field</inlineHelpText>
        <label>Lead Source Detail - Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Lead_Source_Detail__c</fullName>
        <label>Lead Source Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LVGO__LeadSource__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>American Hospital Association</fullName>
                </value>
                <value>
                    <fullName>Becker’s</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Event/Tradeshow</fullName>
                </value>
                <value>
                    <fullName>Hosted Event</fullName>
                </value>
                <value>
                    <fullName>Inbound Call</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>Nurture</fullName>
                </value>
                <value>
                    <fullName>Paid Advertising</fullName>
                </value>
                <value>
                    <fullName>State Hospital Association</fullName>
                </value>
                <value>
                    <fullName>Telemarketing</fullName>
                </value>
                <value>
                    <fullName>Third Party Acquired</fullName>
                </value>
                <value>
                    <fullName>Web Form</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>White Hawk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Lead_Type__c</fullName>
        <label>Lead Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Payer</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Legacy_Salesforce_Id__c</fullName>
        <description>Holds salesforce id&apos;s that can be referenced for existing data during migration</description>
        <externalId>true</externalId>
        <label>Legacy Salesforce Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LVGO__MQL_Date__c</fullName>
        <description>Date the Lead became qualified.</description>
        <inlineHelpText>Date the Lead became qualified.</inlineHelpText>
        <label>MQL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__MQL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Lead is a Marketing Qualified Lead by acquiring 75+ points through various interactions with Livongo’s marketing efforts.</description>
        <inlineHelpText>Lead is a Marketing Qualified Lead by acquiring 75+ points through various interactions with Livongo’s marketing efforts.</inlineHelpText>
        <label>MQL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Microsoft_Involved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Microsoft Involved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Migration_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LVGO__MobilePhone__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LVGO__No_Acct_Found_Via_Email_Parse_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flow populates this checkbox when a Lead is created with an email address, but does not have an account and the results of a lookup yield no results.</description>
        <inlineHelpText>Flow populates this checkbox when a Lead is created with an email address, but does not have an account and the results of a lookup yield no results.</inlineHelpText>
        <label>No Acct Found Via Email Parse Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__NumberOfEmployees__c</fullName>
        <label>No. of Employees</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Offers_Benefits_US_Employes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offers Benefits US Employes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LVGO__Playbooks_Next_Step_Due_Date__c</fullName>
        <description>Shows the date when the next set of Playbooks tasks are due.</description>
        <label>Playbooks Next Step Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__Playbooks_Play_Name__c</fullName>
        <label>Playbooks Play Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Playbooks_Play_Status__c</fullName>
        <label>Playbooks Play Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Playbooks_Step_Number__c</fullName>
        <label>Playbooks Step Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Priority_Event_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if this is a white-glove lead (may include pre-show gift, etc)</inlineHelpText>
        <label>Priority Event Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                </value>
                <value>
                    <fullName>Cold</fullName>
                </value>
                <value>
                    <fullName>Lukewarm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Ready_to_convert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready to convert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Reason_Rejected__c</fullName>
        <label>Reason Rejected</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LVGO__Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Already has an opportunity/duplicate</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Inaccurate Data/Junk</fullName>
                </value>
                <value>
                    <fullName>Incorrectly Assigned/Wrong Rep</fullName>
                </value>
                <value>
                    <fullName>Job Title Not Relevant</fullName>
                </value>
                <value>
                    <fullName>No budget</fullName>
                </value>
                <value>
                    <fullName>No interest/need</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Student/Retired</fullName>
                </value>
                <value>
                    <fullName>Unable to Reach</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Reason_Why_Convert__c</fullName>
        <label>Reason Why Convert</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Route_to__c</fullName>
        <label>Route to</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Sent_to_Product_Awareness_Timestamp__c</fullName>
        <description>Indicates the date and time in which a workflow fired to send the lead to the product awareness team. Populated by process builder automation.</description>
        <inlineHelpText>Indicates the date and time in which a workflow fired to send the lead to the product awareness team.</inlineHelpText>
        <label>Sent to Product Awareness Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LVGO__Sent_to_Product_Awareness__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a workflow sent an email regarding the lead record to the product awareness team.</description>
        <inlineHelpText>Indicates whether a workflow sent an email regarding the lead record to the product awareness team.</inlineHelpText>
        <label>Sent to Product Awareness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AQL</fullName>
                    <default>true</default>
                    <label>AQL</label>
                </value>
                <value>
                    <fullName>MQL</fullName>
                </value>
                <value>
                    <fullName>SAL</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__TAN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>LVGO__Account__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__Territory__c</fullName>
        <label>Territory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jason Macaleer</fullName>
                </value>
                <value>
                    <fullName>Neal Lewis</fullName>
                </value>
                <value>
                    <fullName>Mike Reeve</fullName>
                </value>
                <value>
                    <fullName>Aaryn Pure</fullName>
                </value>
                <value>
                    <fullName>Randy Forman</fullName>
                </value>
                <value>
                    <fullName>Bill Kutsche</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Title__c</fullName>
        <label>Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LVGO__Why_not_convert__c</fullName>
        <inlineHelpText>Reason why not converting this lead or &quot;lead is dead&quot;</inlineHelpText>
        <label>Why not convert</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LVGO__Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Just purchased competitor</fullName>
                </value>
                <value>
                    <fullName>Wrong contact</fullName>
                </value>
                <value>
                    <fullName>Asked to be removed</fullName>
                </value>
                <value>
                    <fullName>Fictitious information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__isdc_closedate__c</fullName>
        <description>The date that the Neuralytics model was last run to re-evaluate the quality of the lead, and the score updated.</description>
        <label>Playbooks Lead Close Score Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LVGO__isdc_closescore__c</fullName>
        <description>A number between 1 and 100, ranking the quality of the account record in relation to all other records in the SFDC org, predicting which record is most likely to close.</description>
        <label>Playbooks Lead Close Score</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__isdc_closescoregrade__c</fullName>
        <description>Define scoring by something other than a Close Score. Example: A, B, C, D or High, Medium, Low.</description>
        <label>Playbooks Lead Close Score Grade</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__of_US_based_Covered_Lives__c</fullName>
        <label># of US-based Covered Lives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>LV Lead</label>
    <listViews>
        <fullName>LVGO__All</fullName>
        <columns>NAME</columns>
        <columns>LVGO__Email__c</columns>
        <columns>LVGO__Company__c</columns>
        <columns>LVGO__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>9/2/2021 12:00 AM</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>LVGO__Email_Opt_Outs</fullName>
        <columns>NAME</columns>
        <columns>LVGO__Email__c</columns>
        <columns>LVGO__Company__c</columns>
        <columns>LVGO__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LVGO__HasOptedOutOfEmail__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LVGO__HasOptedOutOfEmail__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Email_Opt_Outs</label>
    </listViews>
    <listViews>
        <fullName>LVGO__Fast_Lane_Lead_Queue_Lead</fullName>
        <columns>NAME</columns>
        <columns>LVGO__Company__c</columns>
        <columns>LVGO__Email__c</columns>
        <columns>LVGO__Status__c</columns>
        <columns>LVGO__Route_to__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Fast Lane Lead Queue</label>
    </listViews>
    <listViews>
        <fullName>LVGO__My_Leads_Created_Last_14_Days</fullName>
        <columns>NAME</columns>
        <columns>LVGO__Email__c</columns>
        <columns>LVGO__Title__c</columns>
        <columns>LVGO__Company__c</columns>
        <columns>LVGO__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:14</value>
        </filters>
        <label>My Leads - Created Last 14 Days</label>
    </listViews>
    <listViews>
        <fullName>LVGO__My_Leads_Created_Last_30_Days</fullName>
        <columns>NAME</columns>
        <columns>LVGO__Email__c</columns>
        <columns>LVGO__Title__c</columns>
        <columns>LVGO__Company__c</columns>
        <columns>LVGO__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>My Leads - Created Last 30 Days</label>
    </listViews>
    <listViews>
        <fullName>LVGO__My_Leads_Created_Last_7_Days</fullName>
        <columns>NAME</columns>
        <columns>LVGO__Email__c</columns>
        <columns>LVGO__Title__c</columns>
        <columns>LVGO__Company__c</columns>
        <columns>LVGO__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>My Leads - Created Last 7 Days</label>
    </listViews>
    <listViews>
        <fullName>LVGO__My_Leads_Created_Last_90_Days</fullName>
        <columns>NAME</columns>
        <columns>LVGO__Email__c</columns>
        <columns>LVGO__Title__c</columns>
        <columns>LVGO__Company__c</columns>
        <columns>LVGO__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_90_DAYS</value>
        </filters>
        <label>My Leads - Created Last 90 Days</label>
    </listViews>
    <listViews>
        <fullName>LVGO__TodaysLeads</fullName>
        <columns>NAME</columns>
        <columns>LVGO__Company__c</columns>
        <columns>LVGO__Email__c</columns>
        <columns>LVGO__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <nameField>
        <label>Lead Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LV Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>